--- a/cnslOFXtoXML.csproj
+++ b/cnslOFXtoXML.csproj
@@ -13,6 +13,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="config\Categorias.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="config\config.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
